Fixed dropdown not showing over canvas

--- a/css/components/w95-window.css
+++ b/css/components/w95-window.css
@@ -117,8 +117,6 @@ w95-window:state(dragged) {
 }
 
 .window-body {
-	position: relative;
-
 	flex-grow: 1;
 
 	background: white;
