--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,6 @@
 }
 
 #mainCanvas {
-	position: absolute;
-	top: 0;
-
 	width: 100%;
 	height: 100%;
 }
